# cegui-dependencies

./: CMakeLists.txt  postbuild_copy.cmake
